--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/breakfastburrito.html">Breakfast Burrito</a>
+    <a href="recipes/avocadosalad.html">Avocado Salad</a>
+    <a href="recipes/trailmix.html">Trail Mix</a>
 </body>
 </html>
