Created three ingredient lists with instructions
Within the HTML files avocadosalad.html, breakfastburrito.html, and trailmix.html, I added a list of ingredients, and instructions for making each recipe.

--- a/recipes/avocadosalad.html
+++ b/recipes/avocadosalad.html
@@ -7,5 +7,18 @@
 
 <body>
     <h1>Avocado Salad</h1>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 avocado</li>
+            <li>1 head of romain lettuce</li>
+        </ul>
+    <h3>Steps</h3>
+        <ol>
+            <li>Chop up the lettuce</li>
+            <li>Slice up the avocado</li>
+            <li>Mix the two together</li>
+            <li>Enjoy</li>
+        </ol>
 </body>
 </html>
