--- a/recipes/trailmix.html
+++ b/recipes/trailmix.html
@@ -7,5 +7,17 @@
 
 <body>
     <h1>Trail Mix</h1>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 cup peanuts</li>
+            <li>1 cup almonds</li>
+            <li>1 cup M&Ms</li>
+        </ul>
+    <h3>Steps</h3>
+        <ol>
+            <li>Mix it all together</li>
+            <li>Enjoy</li>
+        </ol>
 </body>
 </html>
