--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -7,5 +7,20 @@
 
 <body>
     <h1>Breakfast Burrito</h1>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 eggs</li>
+            <li>1 tortilla</li>
+            <li>1 teaspoon hot sauce</li>
+        </ul>
+    <h3>Steps</h3>
+        <ol>
+            <li>Cook scrambled eggs</li>
+            <li>Place the scambled eggs inside the tortilla</li>
+            <li>Add hot sauce</li>
+            <li>Grill the outside of the tortilla</li>
+            <li>Enjoy</li>
+        </ol>
 </body>
 </html>
