Created image folder and added images to recipes
Created a folder for images, and added one image
tag to each recipe's HTML file.

--- a/recipes/trailmix.html
+++ b/recipes/trailmix.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Trail Mix</h1>
 
+    <img src="../images/TrailMix.jpg" alt="A timeless snack for the trail." height="500" width="400">
+
     <h2>Ingredients</h2>
         <ul>
             <li>1 cup peanuts</li>
