--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Breakfast Burrito</h1>
 
+    <img src="../images/BreakfastBurrito.jpg" alt="A beautiful breakfast burrito." height="500" width="500">
+
     <h2>Ingredients</h2>
         <ul>
             <li>2 eggs</li>
