Create a short paragraph for each recipe
In each of the three recipe webpages, I added one
short paragraph.

--- a/recipes/breakfastburrito.html
+++ b/recipes/breakfastburrito.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Breakfast Burrito</h1>
 
-    <img src="../images/BreakfastBurrito.jpg" alt="A beautiful breakfast burrito." height="500" width="500">
-
+        <img src="../images/BreakfastBurrito.jpg" alt="A beautiful breakfast burrito." height="500" width="500">
+        <p>A great way to start the day.</p>
     <h2>Ingredients</h2>
         <ul>
             <li>2 eggs</li>
