--- a/recipes/avocadosalad.html
+++ b/recipes/avocadosalad.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Avocado Salad</h1>
 
-    <img src="../images/AvocadoSalad.jpg" alt="An appetizing avocado salad." height="500" width="500">
-
+        <img src="../images/AvocadoSalad.jpg" alt="An appetizing avocado salad." height="500" width="500">
+        <p>So healthy.</p>
     <h2>Ingredients</h2>
         <ul>
             <li>1 avocado</li>
